tests/Core/negative/test003.jvc
-- matching on non-data

case \x x of nil -> nil
